--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -885,7 +885,6 @@ allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.105.248;
 allow 23.137.248.100;
-allow 23.137.253.109;
 allow 23.137.253.113;
 allow 23.137.253.254;
 allow 23.137.253.27;
@@ -915,6 +914,7 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
+allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
@@ -967,7 +967,6 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
-allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1229,6 +1228,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1726,6 +1726,7 @@ allow 45.95.169.104;
 allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.252;
+allow 45.95.233.104;
 allow 46.165.193.216;
 allow 46.165.243.36;
 allow 46.232.251.191;
@@ -1746,6 +1747,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1843,6 +1845,7 @@ allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.224.201;
 allow 84.239.46.144;
+allow 85.208.139.110;
 allow 85.93.218.204;
 allow 85.93.31.31;
 allow 86.107.101.234;
@@ -1867,7 +1870,6 @@ allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
-allow 89.150.40.216;
 allow 89.234.157.254;
 allow 89.58.26.216;
 allow 89.58.41.156;
