--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -886,6 +886,7 @@ set_real_ip_from 23.129.64.225;
 set_real_ip_from 23.129.64.99;
 set_real_ip_from 23.137.105.248;
 set_real_ip_from 23.137.248.100;
+set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.113;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
@@ -913,15 +914,6 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.28;
-set_real_ip_from 23.191.200.29;
-set_real_ip_from 23.191.200.3;
-set_real_ip_from 23.191.200.30;
-set_real_ip_from 23.191.200.31;
-set_real_ip_from 23.191.200.4;
-set_real_ip_from 23.191.200.5;
-set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -956,7 +948,6 @@ set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
-set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
@@ -968,6 +959,7 @@ set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
+set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
@@ -1178,7 +1170,6 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
-set_real_ip_from 2a02:4780:41:a921::1;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
@@ -1259,6 +1250,7 @@ set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
 set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::40;
+set_real_ip_from 2a06:7e00:406:c400:2c9:b0ff:fe17:5cca;
 set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
 set_real_ip_from 2a06:d380:0:103:acab:4c4b:ac4b:1312;
@@ -1617,7 +1609,6 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.46.196.22;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.135.24.176;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
@@ -1800,7 +1791,6 @@ set_real_ip_from 66.78.40.182;
 set_real_ip_from 66.78.40.210;
 set_real_ip_from 66.94.111.228;
 set_real_ip_from 67.219.109.141;
-set_real_ip_from 69.62.120.155;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
