--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -26,7 +26,6 @@ set_real_ip_from 104.244.73.190;
 set_real_ip_from 104.244.73.193;
 set_real_ip_from 104.244.73.43;
 set_real_ip_from 104.244.74.51;
-set_real_ip_from 104.244.74.97;
 set_real_ip_from 104.244.75.140;
 set_real_ip_from 104.244.77.208;
 set_real_ip_from 104.244.78.162;
@@ -596,7 +595,9 @@ set_real_ip_from 195.47.238.176;
 set_real_ip_from 195.47.238.177;
 set_real_ip_from 195.47.238.178;
 set_real_ip_from 195.47.238.44;
+set_real_ip_from 195.47.238.83;
 set_real_ip_from 195.47.238.84;
+set_real_ip_from 195.47.238.86;
 set_real_ip_from 195.47.238.87;
 set_real_ip_from 195.47.238.90;
 set_real_ip_from 195.47.238.91;
@@ -1029,7 +1030,6 @@ set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
-set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:30:f9dd:ecef:a3db:545c:76ee;
@@ -1417,6 +1417,8 @@ set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
@@ -1581,6 +1583,7 @@ set_real_ip_from 2a12:a800:9:1:45:88:186:89;
 set_real_ip_from 2a12:a800:9:1:45:88:186:92;
 set_real_ip_from 2a14:1ec7:1000:a633::1;
 set_real_ip_from 2a14:7583:f607::;
+set_real_ip_from 2a14:c380:280:77::a;
 set_real_ip_from 2a14:c380:50:20::a;
 set_real_ip_from 2a14:c380:50:62::a;
 set_real_ip_from 2c0f:6c0:0:11::5e3d;
@@ -1590,7 +1593,6 @@ set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.133.0.235;
 set_real_ip_from 31.184.236.104;
 set_real_ip_from 31.220.75.237;
-set_real_ip_from 31.40.204.186;
 set_real_ip_from 31.40.204.206;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
@@ -1826,7 +1828,6 @@ set_real_ip_from 82.117.255.113;
 set_real_ip_from 82.118.248.205;
 set_real_ip_from 82.153.138.125;
 set_real_ip_from 82.153.138.241;
-set_real_ip_from 82.153.138.7;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.131.71;
@@ -1851,6 +1852,7 @@ set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
 set_real_ip_from 87.120.222.33;
 set_real_ip_from 87.120.254.132;
+set_real_ip_from 87.121.79.55;
 set_real_ip_from 87.121.84.8;
 set_real_ip_from 88.151.192.2;
 set_real_ip_from 88.80.20.86;
