--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -66,7 +66,6 @@ set_real_ip_from 107.189.31.52;
 set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
-set_real_ip_from 107.189.5.188;
 set_real_ip_from 107.189.5.249;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
@@ -225,7 +224,6 @@ set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 178.30.234.82;
-set_real_ip_from 179.35.7.224;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.134.19;
 set_real_ip_from 179.43.159.194;
@@ -588,6 +586,7 @@ set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.42.196.42;
 set_real_ip_from 194.53.137.156;
 set_real_ip_from 194.55.167.14;
+set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.246.231.197;
@@ -896,6 +895,7 @@ set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.244;
 set_real_ip_from 23.137.255.85;
 set_real_ip_from 23.151.8.8;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.177.185.98;
 set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.190.216.8;
@@ -955,6 +955,7 @@ set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
@@ -1516,6 +1517,7 @@ set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
 set_real_ip_from 2a12:a800:11:1:124:198:131:114;
 set_real_ip_from 2a12:a800:11:1:124:198:131:191;
@@ -1615,7 +1617,6 @@ set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.221.208.71;
 set_real_ip_from 37.221.93.88;
 set_real_ip_from 37.228.129.128;
-set_real_ip_from 37.228.129.162;
 set_real_ip_from 37.228.129.168;
 set_real_ip_from 37.228.129.189;
 set_real_ip_from 37.228.129.5;
@@ -1839,6 +1840,7 @@ set_real_ip_from 82.117.255.113;
 set_real_ip_from 82.118.248.205;
 set_real_ip_from 82.153.138.125;
 set_real_ip_from 82.153.138.241;
+set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.131.71;
