--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -127,6 +127,7 @@ set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
@@ -687,6 +688,7 @@ set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
 set_real_ip_from 2a12:a800:11:1:124:198:131:114;
 set_real_ip_from 2a12:a800:11:1:124:198:131:191;
